--- a/my-app2/package.json
+++ b/my-app2/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-app2",
   "version": "0.1.0",
+  "homepage": "https://kouji0705.github.io/my-app/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
